--- a/MBAClub/WebRoot/css/page.css
+++ b/MBAClub/WebRoot/css/page.css
@@ -81,6 +81,8 @@
     font-size: 20px;
     text-align: center;
     margin: 10px 0 5px 0;
+	overflow:hidden;
+	text-overflow:ellipsis;
 }
 
 .main-info {
@@ -132,6 +134,9 @@
 
 .side .list a {
     display: block;
+	width:100%;
+	text-overflow:ellipsis;
+	overflow:hidden;
 }
 
 .side .list a:hover {
